<resources>
    <string name="app_name">Aula6</string>
    <string name="label_button_attach_image">Attach image</string>
    <string name="label2_button_attach_image">Change image</string>
    <string name="label_edittext_receiver">Receiver</string>
    <string name="label_button_send">Send</string>
    <string name="description_attached_image">Attached image</string>
    <string name="label_edittext_message">Message</string>
    <string name="alert_inform_receiver">Please inform the message receiver.</string>
    <string name="alert_inform_message">Please inform the message to send.</string>
    <string name="alert_attach_image">Please attach an image to the message.</string>
</resources>
