<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sala01.aula6.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edittext_receiver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_edittext_receiver"
                android:inputType="text" />

            <EditText
                android:id="@+id/edittext_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_edittext_message"
                android:inputType="text" />

            <Button
                android:id="@+id/button_attach_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_button_attach_image"
                android:textSize="@dimen/button_text_size" />


            <ImageView
                android:id="@+id/imageview_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_attached_image" />


            <Button
                android:id="@+id/button_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_button_send"
                android:textSize="@dimen/button_text_size" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
